--- a/upload-ai-api/package.json
+++ b/upload-ai-api/package.json
@@ -9,18 +9,23 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@fastify/multipart": "^7.7.3",
-    "@prisma/client": "5.3.0",
-    "fastify": "^4.23.1",
-    "openai": "^4.6.0",
-    "zod": "^3.22.2"
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
-    "dotenv": "^16.3.1",
-    "prisma": "^5.3.0",
-    "tsx": "^3.12.10",
+    "prisma": "^5.2.0",
+    "tsx": "^3.12.8",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@fastify/cors": "^8.3.0",
+    "@fastify/multipart": "^7.7.3",
+    "@prisma/client": "5.2.0",
+    "ai": "^2.2.12",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.23.0",
+    "openai": "^4.6.0",
+    "zod": "^3.22.2"
   }
 }
